if (NOT EMSCRIPTEN)
    add_executable(make_example_apps make_example_apps.cpp)
    target_link_libraries(make_example_apps PRIVATE source_parse)
    target_compile_definitions(make_example_apps PRIVATE -DIMGUI_MANUAL_SOURCE_DIR="${CMAKE_SOURCE_DIR}")
    if (NOT WIN32)
        file(CREATE_LINK ${CMAKE_BINARY_DIR}/src/assets ${CMAKE_CURRENT_BINARY_DIR}/assets SYMBOLIC)
    endif()
endif()